# oke

deteksi_openvn/: CMakeLists.txt  package.xml
deteksi_openvn/src/: ambil_frame.cpp  ambil_frame2.cpp  proses_deteksi.cpp  proses_deteksi2.cpp
deteksi_openvn_2/: CMakeLists.txt  package.xml
deteksi_openvn_2/src/: ambil_frm.cpp  proses_deteksi.cpp
src/: 001.cpp  001temp.cpp  Detecttrash.cpp  auto_label.cpp  cobataskbar.cpp  detect_box.cpp  duakamera.cpp  dummy.cpp  filter_img.cpp  findkontur.cpp  frame.py  main.cpp  mask_object.cpp  progrobot.cpp  rawtest.cpp  ros2toros1.cpp  scannerteks.cpp  shapecircle.cpp  shapedetect.cpp  test.cpp  test1_video.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test_filter_comb.cpp  tuning_img.py
